@@ -7,5 +7,6 @@
 </maintainer>
 <use>
 	<flag name='enca'>Enables support for charset discovery and conversion.</flag>
+	<flag name='harfbuzz'>Enables OpenType shaping via <pkg>media-libs/harfbuzz</pkg>.</flag>
 </use>
 </pkgmetadata>
