@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Oct 2011; Nikoli <nikoli@lavabit.com> libass-9999.ebuild, metadata.xml:
+  update git url, harfbuzz is now optional, cosmetics
+
   06 Aug 2011; Nikoli <nikoli@lavabit.com> +libass-9999.ebuild,
   -libass-9999-r1.ebuild:
   add fribidi dep, remove keywords from live ebuild, cosmetics
